plugins/devkit/devkit-kotlin-tests/testData/inspections/extensionRegisteredAsServiceOrComponent/ExtensionLightService.kt
import com.intellij.openapi.components.Service;

@Service
class <error descr="A class must not be registered as both an extension and a service">ExtensionLightService</error> : MyExtension